--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,10 @@ enable_smart_app_banner                   : true                                
 
 
 # Information About Yourself
-your_name                                 : Nick Casson                                
-your_link                                 :                      
+your_name                                 : Burn Labs                                
+your_link                                 : www.burnlabs.co                     
 your_city                                 : Auburn, AL                                
-email_address                             : nrc0024@auburn.edu
+email_address                             : hello@burnlabs.co
 facebook_username                         :                                           
 instagram_username                        : QuestTrivia
 twitter_username                          : 
