--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ enable_smart_app_banner                   : true                                
 
 # Information About Yourself
 your_name                                 : Burn Labs                                
-your_link                                 : www.burnlabs.co                     
+your_link                                 : https://www.burnlabs.co                     
 your_city                                 : Auburn, AL                                
 email_address                             : hello@burnlabs.co
 facebook_username                         :                                           
